rotas e paginas index

--- a/view/tema/css/tema.css
+++ b/view/tema/css/tema.css
@@ -3,7 +3,7 @@
 #topo{
 
 min-height: 100px;
-background-color: #204d74;
+background-color: #592074;
 color: #fff;
     
 }
@@ -11,14 +11,14 @@ color: #fff;
 #rodape{
      
  min-height: 150px;
- background-color: #204d74;  
+ background-color: #592074;  
 color: #fff; 
     
 }
 
 #conteudo{
     
-   min-height: 450px; 
+   min-height: 611px; 
 }
 
 #lateral{
